# grouped_gemm

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: _build.yml  build.yml  publish.yml
csrc/: torch_extensions.cpp
csrc/xpu/: CMakeLists.txt  grouped_gemm.cpp  grouped_gemm.hpp  ops.hpp
grouped_gemm/: __init__.py  ops.py  ops_test.py
